Styling and syntax corrections

--- a/src/app/partials/homepage.html
+++ b/src/app/partials/homepage.html
@@ -1,3 +1,6 @@
-<div ng-controller="homepageController">
-  <h1> I've been rendered!!!11!11one!</h1>
+<div ng-controller="HomepageController">
+  <script type="text/ng-template" id="alert.html">
+    <div ng-transclude></div>
+  </script>
+  <h1 class='header-homepage'>To Dew 💧</h1>
 </div>
