--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -1,3 +1,41 @@
+body {
+background: #70e1f5 !important;
+background: -webkit-linear-gradient(to left, #70e1f5 , #ffd194) !important;
+background: linear-gradient(to left, #70e1f5 , #ffd194) !important;
+}
+
+.glyphicon {
+  float: right;
+}
+
+.full-screen {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.todo-list {
+  padding: 10px;
+}
+
 .header-homepage {
   text-align: center;
+  font-family: 'Quicksand', sans-serif;
 }
+/*.background-image {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1;
+
+  display: block;
+  background-image: url('http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_527bf56961712_1.JPG');
+  width: 1200px;
+  height: 800px;
+
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}*/
