--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -9,6 +9,10 @@ padding-top: 70px;
   float: right;
 }
 
+.author-entry {
+  margin-left: 150px;
+}
+
 .full-screen {
   background-size: cover;
   background-position: center;
@@ -23,26 +27,11 @@ padding-top: 70px;
   text-align: center;
   font-family: 'Quicksand', sans-serif;
 }
+
 .weather-view {
   font-family: 'Quicksand', sans-serif;
 }
+
 .navbar-brand {
   font-family: 'Quicksand', sans-serif;
 }
-/*.background-image {
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: 1;
-
-  display: block;
-  background-image: url('http://666a658c624a3c03a6b2-25cda059d975d2f318c03e90bcf17c40.r92.cf1.rackcdn.com/unsplash_527bf56961712_1.JPG');
-  width: 1200px;
-  height: 800px;
-
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-}*/
