--- a/src/app/partials/homepage.html
+++ b/src/app/partials/homepage.html
@@ -31,7 +31,7 @@
   </div>
 
     <div class="list-group todo-list">
-      <a href="" id="{{value._id}}" class="list-group-item" ng-class="{strike:todo.done}" ng-click='deleteTodo()' ng-repeat='(key, value) in todos'>
+      <a href="" ng-cloak id="{{value._id}}" class="list-group-item" ng-class="{strike:todo.done}" ng-click='deleteTodo($event)' ng-repeat='(key, value) in todos'>
         {{value.content}}
         <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
       </a>
