it's now a chrome extension?

--- a/src/app/partials/homepage.html
+++ b/src/app/partials/homepage.html
@@ -26,7 +26,7 @@
 </nav>
   <div class='weather-view'>
     <center><img src='app/assets/sun.svg'></img><br />
-      Good Evening
+      Good Evening {{currentAuthor}}
     </center>
   </div>
 
