--- a/src/app/partials/homepage.html
+++ b/src/app/partials/homepage.html
@@ -25,15 +25,15 @@
   </div>
 </nav>
   <div class='weather-view'>
-    <center><img src='app/assets/sun.svg'></img><br />
+    <center><img src='app/assets/sun.svg' ng-click='getWeatherData()'></img><br />
       Good Evening {{currentAuthor}}
     </center>
   </div>
 
     <div class="list-group todo-list">
-      <a href="" ng-cloak id="{{value._id}}" class="list-group-item" ng-class="{strike:todo.done}" ng-click='deleteTodo($event)' ng-repeat='(key, value) in todos'>
+      <a href="" ng-cloak class="list-group-item" ng-class="{strike:todo.done}"  ng-repeat='(key, value) in todos'>
         {{value.content}}
-        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-remove text-danger" id="{{value._id}}" aria-hidden="true" ng-click='deleteTodo($event)'></span>
       </a>
     </div>
 </div>
