Able to pull geolocation data using navigator.geolocation
Added a favicon :droplet:

--- a/src/app/partials/homepage.html
+++ b/src/app/partials/homepage.html
@@ -26,7 +26,7 @@
 </nav>
   <div class='weather-view'>
     <center><img src='app/assets/sun.svg' ng-click='getWeatherData()'></img><br />
-      Good Evening {{currentAuthor}}
+      Good Afternoon {{currentAuthor}}
     </center>
   </div>
 
