Temperature and weather conditions displayed. New weather icon set.

--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -5,6 +5,26 @@ background: linear-gradient(to left, #70e1f5 , #ffd194) !important;
 padding-top: 70px;
 }
 
+.temperature {
+  /*float: left;*/
+}
+
+.sun-icon {
+  animation-name: spin;
+  animation-duration: 40000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
 .glyphicon {
   float: right;
 }
