--- a/src/app/partials/homepage.html
+++ b/src/app/partials/homepage.html
@@ -25,8 +25,8 @@
   </div>
 </nav>
   <div class='weather-view'>
-    <center><img src='app/assets/sun.svg' ng-click='getWeatherData()'></img><br />
-      Good Afternoon {{currentAuthor}}
+    <center><h1><i class='wi wi-night-alt-cloudy'></i></h1><div class='temperature'>{{ currentTemp }} {{ currentConditions }} {{ chanceOfRain }}</div><br />
+      Good Evening {{currentAuthor}}
     </center>
   </div>
 
