Weather icon updates based on real conditions

--- a/src/app/partials/homepage.html
+++ b/src/app/partials/homepage.html
@@ -25,7 +25,7 @@
   </div>
 </nav>
   <div class='weather-view'>
-    <center><h1><i class='wi wi-night-alt-cloudy'></i></h1><div class='temperature'>{{ currentTemp }} {{ currentConditions }} {{ chanceOfRain }}</div><br />
+    <center><i class='wi {{ conditionIcon }}'></i><div class='temperature'>{{ currentTemp }} {{ currentConditions }} {{ chanceOfRain }}</div><br />
       Good Evening {{currentAuthor}}
     </center>
   </div>
