--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -5,11 +5,11 @@ background: linear-gradient(to left, #70e1f5 , #ffd194) !important;
 padding-top: 70px;
 }
 
-.temperature {
-  /*float: left;*/
+.wi {
+  font-size: 6em;
 }
 
-.sun-icon {
+.spin-me {
   animation-name: spin;
   animation-duration: 40000ms;
   animation-iteration-count: infinite;
