Generate greeting based on user's local time

--- a/src/app/partials/homepage.html
+++ b/src/app/partials/homepage.html
@@ -26,7 +26,7 @@
 </nav>
   <div class='weather-view'>
     <center><i class='wi {{ conditionIcon }}'></i><div class='temperature'>{{ currentTemp }} {{ currentConditions }} {{ chanceOfRain }}</div><br />
-      Good Evening {{currentAuthor}}
+      {{ greeting }} {{ currentAuthor }}
     </center>
   </div>
 
