--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -1,6 +1,6 @@
 body {
 background: #70e1f5 !important;
-background: -webkit-linear-gradient(to left, #70e1f5 , #ffd194) !important;
+/*background: -webkit-linear-gradient(to left, #70e1f5 , #ffd194) !important;*/
 background: linear-gradient(to left, #70e1f5 , #ffd194) !important;
 padding-top: 70px;
 }
@@ -9,11 +9,16 @@ padding-top: 70px;
   font-size: 6em;
 }
 
+.loading-icon {
+  font-size: 0.8em;
+}
+
 .spin-me {
   animation-name: spin;
-  animation-duration: 40000ms;
+  animation-duration: 5000ms;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+  margin-bottom: 7px;
 }
 
 @keyframes spin {
