:new: Prepare for specs, Got replaces Request, start testing rain %

--- a/src/app/partials/homepage.html
+++ b/src/app/partials/homepage.html
@@ -27,8 +27,8 @@
   <div class='weather-view'>
     <center>
       <div class='loading-icon text-warning'><i class='wi wi-day-sunny spin-me'></i><br />Peeking out the window</div>
-      <i class='wi {{ conditionIcon }}'></i>
-      <div class='temperature'>{{ currentTemp }} {{ currentConditions }} {{ chanceOfRain }}</div><br />
+      <i class='wi {{ conditionIcon }} condition-icon'></i>
+      <div class='temperature'>{{ currentTemp }} {{ currentConditions }}</div>{{ chanceOfRainL1 }}<br />{{ chanceOfRainL2 }}<br />
       {{ greeting }} {{ currentAuthor }}
     </center>
   </div>
